@@ -1,3 +1,12 @@
+2007-04-26  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/4429
+	* i386-dis.c (print_insn): Also swap the order of op_riprel
+	when swapping op_index.  Break when the RIP relative address
+	is printed.
+	(OP_E): Properly handle RIP relative addressing and print the
+	explicit zero displacement for Intel mode.
+
 2007-04-27  Alan Modra  <amodra@bigpond.net.au>
 
 	* Makefile.am: Run "make dep-am".
